# mvp-samples

./: .env.example  .gitignore  AGENTS.md  README.md  app.js  nest-cli.json  package-lock.json  package.json  prisma.config.ts  site-data.json  vitest.base.config.ts  vitest.unit.config.ts
.github/workflows/: benchmark-pages.yml  nestjs-go-export-excel-wasm-ci.yml
.husky/: pre-commit
.ralphex/: config
.ralphex/progress/: progress-issue-7-rust-wasm-export-plan.txt
benchmarks/data/: README.md
benchmarks/profiles/: continuous-default.json
benchmarks/schema/: benchmark-run.schema.json
benchmarks/site/: app.js  index.html  styles.css
data/indexes/: history-index.json  implementations.json  latest-runs.json  run-summaries.json  scenario-trends.json
docs/: benchmark-pages.md  benchmark-results-streaming.md  benchmarking.md
docs/plans/: 2026-03-20-publish-excel-export-benchmark-results-to-github-pages.md
excel-streamer/: README.md  test_wasm.js
nestjs-go-export-excel-wasm/: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.e2e.config.ts  vitest.unit.config.ts
nestjs-go-export-excel-wasm/docs/: benchmark-results-streaming.md  benchmarking.md  rust-wasm-notes.md
nestjs-go-export-excel-wasm/excel-streamer/: README.md  go.mod  (+2 more)
nestjs-go-export-excel-wasm/rust-excel-streamer/: Cargo.toml  README.md
nestjs-go-export-excel-wasm/rust-excel-streamer/src/: lib.rs
prisma/: schema.prisma  seed.ts
rust-excel-streamer/: test_wasm.js
src/: main.spec.ts
test/: app.e2e-spec.ts  export-comparison.js
(+87 files in other folders)
